--- a/angular.json
+++ b/angular.json
@@ -125,8 +125,18 @@
             ],
             "styles": [
               {
-                "input": "styles/handset.css",
-                "bundleName": "handset",
+                "input": "node_modules/bootstrap/dist/css/bootstrap-grid.css",
+                "bundleName": "bootstrap-grid",
+                "inject": true
+              },
+              {
+                "input": "node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
+                "bundleName": "indigo-pink",
+                "inject": true
+              },
+              {
+                "input": "node_modules/material-design-icons/iconfont/material-icons.css",
+                "bundleName": "material-icons",
                 "inject": true
               },
               "projects/handset/src/styles.css"
@@ -160,10 +170,10 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "proxyConfig": ""
+            "proxyConfig": "./proxy.conf.mjs",
+            "host": "127.0.0.1"
           },
           "configurations": {
-
             "production": {
               "buildTarget": "handset:build:production"
             },
@@ -241,8 +251,8 @@
             ],
             "styles": [
               {
-                "input": "styles/web.css",
-                "bundleName": "web",
+                "input": "node_modules/bootstrap/dist/css/bootstrap.css",
+                "bundleName": "bootstrap",
                 "inject": true
               },
               "projects/web/src/styles.css"
