--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "watch-handset": "ng build handset --watch --configuration development",
     "build-styles": "pnpm run build-web-style && pnpm run build-handset-style",
     "start": "pnpm run watch-web",
-    "serve-web": "ng serve web"
+    "serve-web": "ng serve web",
+    "serve-handset": "ng serve handset"
   },
   "repository": {
     "type": "git",
@@ -71,7 +72,6 @@
     "@typescript-eslint/parser": "6.13.1",
     "eslint": "^8.54.0",
     "ng-packagr": "^17.0.0",
-    "typescript": "~5.2.2",
-    "sass": "^1.69.5"
+    "typescript": "~5.2.2"
   }
 }
