--- a/package.json
+++ b/package.json
@@ -9,13 +9,10 @@
     "ng": "ng",
     "build": "pnpm run build-shared && pnpm run build-web && pnpm run build-handset",
     "build-shared": "ng build app-shared --configuration production",
-    "build-web-style": "sass styles/web.scss styles/web.css --no-source-map --style=compressed",
-    "build-web": "pnpm run build-web-style && ng build web --configuration production",
-    "build-handset-style": "sass styles/handset.scss styles/handset.css --no-source-map --style=compressed",
-    "build-handset": "pnpm run build-handset-style && ng build handset --configuration production",
+    "build-web": "ng build web --configuration production",
+    "build-handset": "ng build handset --configuration production",
     "watch-web": "ng build web --watch --configuration development",
     "watch-handset": "ng build handset --watch --configuration development",
-    "build-styles": "pnpm run build-web-style && pnpm run build-handset-style",
     "start": "pnpm run watch-web",
     "serve-web": "ng serve web",
     "serve-handset": "ng serve handset"
