--- a/angular.json
+++ b/angular.json
@@ -255,7 +255,8 @@
                 "bundleName": "bootstrap",
                 "inject": true
               },
-              "projects/web/src/styles.css"
+              "projects/web/src/styles.css",
+              "node_modules/ng-zorro-antd/ng-zorro-antd.min.css"
             ],
             "scripts": []
           },
