--- a/.editorconfig
+++ b/.editorconfig
@@ -1,4 +1,13 @@
-root = false
+# http://editorconfig.org
+root = true
+# All files
+[*]
+end_of_line = lf
+insert_final_newline = true
+charset = utf-8
+indent_style = space
+indent_size = 4
+trim_trailing_whitespace = true
 
 # html/scss/css files
 [*.{html,scss,css,yml,mjs}]
