--- a/package.json
+++ b/package.json
@@ -55,7 +55,8 @@
     "hammerjs": "^2.0.8",
     "material-design-icons": "^3.0.1",
     "echarts": "^5.4.3",
-    "ng-zorro-antd": "^17.0.1"
+    "ng-zorro-antd": "^17.0.1",
+    "date-fns": "^3.3.1"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^17.0.5",
