update ng to 17.1.0, ng-zorro-antd to 17.2.0

--- a/angular.json
+++ b/angular.json
@@ -251,7 +251,7 @@
             ],
             "styles": [
               {
-                "input": "node_modules/ng-zorro-antd/ng-zorro-antd.min.css",
+                "input": "node_modules/ng-zorro-antd/ng-zorro-antd.variable.css",
                 "bundleName": "ng-zorro-antd",
                 "inject": true
               },
