--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -2,31 +2,29 @@
   "version": "2.0.0",
   "tasks": [
     {
+      "label": "pnpm:build-shared",
       "type": "shell",
       "command": "pnpm",
       "args": ["run", "build-shared"],
-      "group": "build",
       "problemMatcher": ["$tsc"],
-      "label": "build-shared",
-      "detail": "pnpm run build-shared"
+      "group": "build",
     },
     {
+      "label": "pnpm:build-web",
       "type": "shell",
       "command": "pnpm",
       "args": ["run", "build-web"],
-      "group": "build",
       "problemMatcher": ["$tsc"],
-      "label": "build-web",
-      "detail": "pnpm run build-web"
+      "group": "build",
     },
     {
+      "label": "pnpm:serve-web",
       "type": "shell",
       "command": "pnpm",
       "args": ["run", "serve-web"],
-      "group": "none",
       "problemMatcher": ["$tsc"],
-      "label": "serve-web",
-      "detail": "pnpm run serve-web"
+      "group": "none",
+      "isBackground": true
     }
   ]
 }
