--- a/package.json
+++ b/package.json
@@ -56,7 +56,8 @@
     "material-design-icons": "^3.0.1",
     "echarts": "^5.4.3",
     "ng-zorro-antd": "^17.2.0",
-    "date-fns": "^3.3.1"
+    "date-fns": "^3.3.1",
+    "@ant-design/icons-angular": "^17.0.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^17.2.0",
