--- a/package.json
+++ b/package.json
@@ -5,15 +5,12 @@
   "main": "src/index.html",
   "scripts": {
     "clean": "rm -rf dist",
-    "ngcc": "ngcc --create-ivy-entry-points -l debug",
     "ng": "ng",
     "build": "pnpm run build-shared && pnpm run build-web && pnpm run build-handset",
     "build-shared": "ng build app-shared --configuration production",
     "build-web": "ng build web --configuration production",
     "build-handset": "ng build handset --configuration production",
-    "watch-web": "ng build web --watch --configuration development",
-    "watch-handset": "ng build handset --watch --configuration development",
-    "start": "pnpm run watch-web",
+    "start": "pnpm run serve-web",
     "serve-web": "ng serve web",
     "serve-handset": "ng serve handset"
   },
