--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,7 @@
         "./dist/app-shared"
       ]
     },
+    "baseUrl": "./",
     "outDir": "./dist/out-tsc",
     "strict": true,
     "noImplicitOverride": true,
