--- a/package.json
+++ b/package.json
@@ -25,42 +25,42 @@
   },
   "homepage": "https://github.com/beginor/net-core-app#readme",
   "dependencies": {
-    "@angular/animations": "^18.2.8",
-    "@angular/common": "^18.2.8",
-    "@angular/compiler": "^18.2.8",
-    "@angular/core": "^18.2.8",
-    "@angular/forms": "^18.2.8",
-    "@angular/platform-browser": "^18.2.8",
-    "@angular/platform-browser-dynamic": "^18.2.8",
-    "@angular/router": "^18.2.8",
+    "@angular/animations": "^19.0.0",
+    "@angular/common": "^19.0.0",
+    "@angular/compiler": "^19.0.0",
+    "@angular/core": "^19.0.0",
+    "@angular/forms": "^19.0.0",
+    "@angular/platform-browser": "^19.0.0",
+    "@angular/platform-browser-dynamic": "^19.0.0",
+    "@angular/router": "^19.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
-    "zone.js": "~0.14.10",
-    "@angular/localize": "^18.2.8",
+    "zone.js": "~0.15.0",
+    "@angular/localize": "^19.0.0",
     "bootstrap": "~5.3.3",
     "bootstrap-icons": "^1.11.3",
     "@fortawesome/fontawesome-free": "^6.6.0",
-    "@angular/cdk": "^18.2.8",
-    "@angular/material": "^18.2.8",
+    "@angular/cdk": "^19.0.0",
+    "@angular/material": "^19.0.0",
     "material-design-icons": "^3.0.1",
     "echarts": "^5.5.1",
-    "ng-zorro-antd": "^18.2.1",
+    "ng-zorro-antd": "^19.0.0",
     "date-fns": "^3.6.0",
-    "@ant-design/icons-angular": "^18.0.0"
+    "@ant-design/icons-angular": "^19.0.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^18.2.9",
-    "@angular-eslint/builder": "18.3.1",
-    "@angular-eslint/eslint-plugin": "18.3.1",
-    "@angular-eslint/eslint-plugin-template": "18.3.1",
-    "@angular-eslint/schematics": "18.3.1",
-    "@angular-eslint/template-parser": "18.3.1",
-    "@angular/cli": "^18.2.9",
-    "@angular/compiler-cli": "^18.2.8",
+    "@angular-devkit/build-angular": "^19.0.6",
+    "@angular-eslint/builder": "19.0.2",
+    "@angular-eslint/eslint-plugin": "19.0.2",
+    "@angular-eslint/eslint-plugin-template": "19.0.2",
+    "@angular-eslint/schematics": "19.0.2",
+    "@angular-eslint/template-parser": "19.0.2",
+    "@angular/cli": "^19.0.6",
+    "@angular/compiler-cli": "^19.0.0",
     "@typescript-eslint/eslint-plugin": "7.11.0",
     "@typescript-eslint/parser": "7.11.0",
-    "eslint": "^8.57.0",
-    "ng-packagr": "^18.2.0",
-    "typescript": "~5.5.2"
+    "eslint": "8.57.0",
+    "ng-packagr": "^19.0.0",
+    "typescript": "~5.6.2"
   }
 }
