--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^19.0.6",
+    "angular-eslint": "19.0.2",
     "@angular-eslint/builder": "19.0.2",
     "@angular-eslint/eslint-plugin": "19.0.2",
     "@angular-eslint/eslint-plugin-template": "19.0.2",
@@ -57,9 +58,10 @@
     "@angular-eslint/template-parser": "19.0.2",
     "@angular/cli": "^19.0.6",
     "@angular/compiler-cli": "^19.0.0",
-    "@typescript-eslint/eslint-plugin": "7.11.0",
-    "@typescript-eslint/parser": "7.11.0",
-    "eslint": "8.57.0",
+    "typescript-eslint": "8.18.1",
+    "@typescript-eslint/eslint-plugin": "8.18.1",
+    "@typescript-eslint/parser": "8.18.1",
+    "eslint": "^9.17.0",
     "ng-packagr": "^19.0.0",
     "typescript": "~5.6.2"
   }
