--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "@typescript-eslint/eslint-plugin": "8.18.1",
     "@typescript-eslint/parser": "8.18.1",
     "eslint": "^9.17.0",
+    "@stylistic/eslint-plugin": "^2.12.1",
     "ng-packagr": "^19.0.0",
     "typescript": "~5.6.2"
   }
