--- a/angular.json
+++ b/angular.json
@@ -59,6 +59,15 @@
             }
           },
           "defaultConfiguration": "production"
+        },
+        "lint": {
+          "builder": "@angular-eslint/builder:lint",
+          "options": {
+            "lintFilePatterns": [
+              "projects/app-shared/**/*.ts",
+              "projects/app-shared/**/*.html"
+            ]
+          }
         }
       }
     },
@@ -188,6 +197,15 @@
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n"
+        },
+        "lint": {
+          "builder": "@angular-eslint/builder:lint",
+          "options": {
+            "lintFilePatterns": [
+              "projects/handset/**/*.ts",
+              "projects/handset/**/*.html"
+            ]
+          }
         }
       }
     },
@@ -314,6 +332,15 @@
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n"
+        },
+        "lint": {
+          "builder": "@angular-eslint/builder:lint",
+          "options": {
+            "lintFilePatterns": [
+              "projects/web/**/*.ts",
+              "projects/web/**/*.html"
+            ]
+          }
         }
       }
     }
