--- a/package.json
+++ b/package.json
@@ -25,45 +25,46 @@
   },
   "homepage": "https://github.com/beginor/net-core-app#readme",
   "dependencies": {
-    "@angular/animations": "^19.0.0",
-    "@angular/common": "^19.0.0",
-    "@angular/compiler": "^19.0.0",
-    "@angular/core": "^19.0.0",
-    "@angular/forms": "^19.0.0",
-    "@angular/platform-browser": "^19.0.0",
-    "@angular/platform-browser-dynamic": "^19.0.0",
-    "@angular/router": "^19.0.0",
+    "@angular/animations": "^19.2.0",
+    "@angular/common": "^19.2.0",
+    "@angular/compiler": "^19.2.0",
+    "@angular/core": "^19.2.0",
+    "@angular/forms": "^19.2.0",
+    "@angular/platform-browser": "^19.2.0",
+    "@angular/platform-browser-dynamic": "^19.2.0",
+    "@angular/router": "^19.2.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0",
-    "@angular/localize": "^19.0.0",
+    "@angular/localize": "^19.2.0",
     "bootstrap": "~5.3.3",
     "bootstrap-icons": "^1.11.3",
     "@fortawesome/fontawesome-free": "^6.6.0",
-    "@angular/cdk": "^19.0.0",
-    "@angular/material": "^19.0.0",
+    "@angular/cdk": "^19.2.0",
+    "@angular/material": "^19.2.0",
     "material-design-icons": "^3.0.1",
-    "echarts": "^5.5.1",
-    "ng-zorro-antd": "^19.0.0",
+    "echarts": "^5.6.0",
+    "ng-zorro-antd": "^19.2.0",
     "date-fns": "^3.6.0",
     "@ant-design/icons-angular": "^19.0.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^19.0.6",
-    "angular-eslint": "19.0.2",
-    "@angular-eslint/builder": "19.0.2",
-    "@angular-eslint/eslint-plugin": "19.0.2",
-    "@angular-eslint/eslint-plugin-template": "19.0.2",
-    "@angular-eslint/schematics": "19.0.2",
-    "@angular-eslint/template-parser": "19.0.2",
-    "@angular/cli": "^19.0.6",
-    "@angular/compiler-cli": "^19.0.0",
-    "typescript-eslint": "8.18.1",
-    "@typescript-eslint/eslint-plugin": "8.18.1",
-    "@typescript-eslint/parser": "8.18.1",
-    "eslint": "^9.17.0",
-    "@stylistic/eslint-plugin": "^2.12.1",
-    "ng-packagr": "^19.0.0",
-    "typescript": "~5.6.2"
+    "@angular-devkit/build-angular": "^19.2.5",
+    "angular-eslint": "19.3.0",
+    "@angular-eslint/builder": "19.3.0",
+    "@angular-eslint/eslint-plugin": "19.3.0",
+    "@angular-eslint/eslint-plugin-template": "19.3.0",
+    "@angular-eslint/schematics": "19.3.0",
+    "@angular-eslint/template-parser": "19.3.0",
+    "@angular/cli": "^19.2.5",
+    "@angular/compiler-cli": "^19.2.0",
+    "typescript-eslint": "8.27.0",
+    "@typescript-eslint/eslint-plugin": "8.27.0",
+    "@typescript-eslint/parser": "8.27.0",
+    "eslint": "^9.23.0",
+    "@stylistic/eslint-plugin": "^4.2.0",
+    "@eslint/js": "9.23.0",
+    "ng-packagr": "^19.2.0",
+    "typescript": "~5.7.2"
   }
 }
