--- a/package.json
+++ b/package.json
@@ -65,6 +65,9 @@
     "@stylistic/eslint-plugin": "^4.4.0",
     "@eslint/js": "9.27.0",
     "ng-packagr": "^19.2.2",
-    "typescript": "~5.8.0"
+    "typescript": "~5.8.0",
+    "tailwindcss": "^4.1.13",
+    "@tailwindcss/postcss": "^4.1.13",
+    "postcss": "^8.5.6"
   }
 }
