upgrade to angular 21, antd 21

--- a/projects/app-shared/tsconfig.lib.json
+++ b/projects/app-shared/tsconfig.lib.json
@@ -4,8 +4,12 @@
     "outDir": "../../out-tsc/lib",
     "declaration": true,
     "declarationMap": true,
-    "inlineSources": true,
     "types": []
   },
-  "exclude": []
+  "include": [
+    "src/**/*.ts"
+  ],
+  "exclude": [
+    "**/*.spec.ts"
+  ]
 }
