--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,6 @@
       ]
     },
     "baseUrl": "./",
-    "outDir": "./dist/out-tsc",
     "strict": true,
     "noImplicitOverride": true,
     "noPropertyAccessFromIndexSignature": true,
@@ -15,17 +14,27 @@
     "noFallthroughCasesInSwitch": true,
     "skipLibCheck": true,
     "isolatedModules": true,
-    "esModuleInterop": true,
     "experimentalDecorators": true,
-    "moduleResolution": "bundler",
     "importHelpers": true,
     "target": "ES2022",
-    "module": "ES2022"
+    "module": "preserve"
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
     "strictInjectionParameters": true,
     "strictInputAccessModifiers": true,
     "strictTemplates": true
-  }
+  },
+  "files": [],
+  "references": [
+    {
+      "path": "./projects/app-shared/tsconfig.lib.json"
+    },
+    {
+      "path": "./projects/handset/tsconfig.app.json"
+    },
+    {
+      "path": "./projects/web/tsconfig.app.json"
+    }
+  ]
 }
